force-app/main/default/objects/Course_rate__c/Course_rate__c.object-meta.xml
<CustomObject>
    <label>Course rate</label>
    <nameField>
        <label>Course rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>