force-app/main/default/objects/Course_rate__c/fields/Course_rate__c.field-meta.xml
<CustomField>
    <fullName>Course_rate__c</fullName>
    <label>Course rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>