force-app/main/default/objects/Course_rate__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Type</label>
    <referenceTo>Type__c</referenceTo>
    <relationshipLabel>Course rates</relationshipLabel>
    <relationshipName>Course_rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>